jlogin: use @login_top@.

--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@
 
 	ios.pm: ignore PDP addr and resolvers in cellular o/p - Reuben Farrelly
 
-	clogin: Add -m & -M options
+	clogin jlogin: Add -m & -M options
 
 	control_rancid: specify path of <group>/rancid.conf
 
