--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2
+	panos.pm: fix package definition
+
 	rancid.type.base: comment adtran definition to avoid confusion
 
 	configure, rancid.pm: check minimum revision of Socket.pm
