--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2
+	control_rancid: fix handling of configs/.cvsignore
+
 	panos.pm: fix package definition
 
 	rancid.type.base: comment adtran definition to avoid confusion
