ios.pm: filter ike2 keys on ASA - Mike Eklund

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	ios.pm: filter ike2 keys on ASA - Mike Eklund
+
 	rancid.conf: move the UID check after setting PATH
 
 	control_rancid: add check for router.db FS
