rancid: fix error checking of module::init() & calling command handlers that are undefined.  eg:
loadtype: found device type cisco in /usr/local/etc/rancid.types.base
loadtype: ios::init() returned failure


HIT COMMAND:shaggy#show version
shaggy.shrubbery.net: undefined function - "ios::ShitShow"
shaggy.shrubbery.net: missed cmd(s): all commands

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.2.99
+	rancid: fix error checking of module::init() & calling command handlers
+	that are undefined.
+
 	ios.pm: filter ike2 keys on ASA - Mike Eklund
 
 	rancid.conf: move the UID check after setting PATH
