--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	*login: fix usage line display of -m | -M
+
 	rancid: fix error checking of module::init() & calling command handlers
 	that are undefined.
 
