--- a/man/clogin.1
+++ b/man/clogin.1
@@ -1,13 +1,14 @@
 .\"
 .hys 50
-.TH "clogin" "1" "21 April 2015"
+.TH "clogin" "1" "3 June 2015"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
 .B clogin
 [\fB\-autoenable\fP]
 [\fB\-noenable\fP]
-[\fB\-dhmMSV\fR]
+[\fB\-dhSV\fR]
+[\fB\-m|M\fR]
 [\c
 .BI \-c\ 
 command]
