--- a/CHANGES
+++ b/CHANGES
@@ -17,7 +17,7 @@
 
 	ios.pm: ignore PDP addr and resolvers in cellular o/p - Reuben Farrelly
 
-	clogin jlogin: Add -m & -M options
+	clogin jlogin mtlogin: Add -m & -M options
 
 	control_rancid: specify path of <group>/rancid.conf
 
