f5rancid: change TERM to vt100-w for 132 width - John Kougoulos http://www.shrubbery.net/pipermail/rancid-discuss/2015-July/008601.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	f5rancid: change TERM to vt100-w for 132 width - John Kougoulos
+
 	arbor.pm: sort IP addresses in policy and display one-per-line as
 	comments so that they are readable and it is easier to see what changed
 	in the policy. There does not appear to be a way to split these lines
