--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	ciscowlc.pm: filter fan status & make temperature match case insensitive
+
 	ios.pm: filter oscillating DTE lines from show diag
 
 	alogin: select ibmnos-cli on IBM Flex System Fabric
