--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	iosxr.pm: misc clean-up for XRv
+
 	rtftpboot: example script to save copies of configs from /tftpboot
 
 	rblogin, rbt.pm: initial riverbed steelhead support
