--- a/README
+++ b/README
@@ -124,7 +124,7 @@ lib/
 	rbt.pm.in	rancid library for Riverbed Steelhead.
 man/		man pages
 share/		Readmes, samples, utilities, contribs, etc
-include/	Include files and rancid version.h
+include/	Include files and rancid's version.h
 
 Also see rancid_intro(1), rancid(1), and clogin(1).
 
@@ -143,8 +143,6 @@ missing		part of GNU autoconf
 mkinstalldirs	GNU autoconf shell script to make installation directories
 
 rancid will also need to have the following packages:
-cvs		Code revision system available from prep.ai.mit.edu:/pub/gnu
-git		Code revision system, an alternative to cvs.
 gnudiff		gnudiff provides the uni-diff (-u) option.  If you do not have
 		a diff that supports -u, configure will set-up rancid to use
 		'diff -c' or 'diff -C'.
@@ -152,6 +150,12 @@ perl5		perl version 5.10 or greater available from www.cpan.org
 expect		http://expect.nist.gov/  We highly suggest that you stick to
 		expect 5.24.1 (or so).  This seems to work best.  Note that
 		you need to have the accompanying tcl &/ tk.
+tcl		Required by expect.
+
+and, rancid will also need to have one of the following packages; your choice:
+cvs		Code revision system available from prep.ai.mit.edu:/pub/gnu
+git		Code revision system, an alternative to cvs.  Use the configure
+		option --with-git to configure for git.
 svn		Code revision system, an alternative to cvs.  Available from
 		http://subversion.tigris.org/tarballs/.  Use the configure
 		option --with-svn to configure for Subversion.
@@ -162,7 +166,6 @@ svn		Code revision system, an alternative to cvs.  Available from
 			`pwd`/CVS
 		sh -c '. /path/to/etc/rancid.conf ; for g in $LIST_OF_GROUPS; \
 			do svn co file://`pwd`/.svn/$g; done'
-tcl		Required by expect.
 
 Bill Fenner (now maintained by others) has a cgi script for interacting
 with CVS repositories via a web interface.  This provides a great way to
