--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	srancid: temp sensor parsing for M6348 and M8024 - Frank Fegert
+
 	srancid: Insert the command string at the top of some of the output
 	to give some context, along with a preceeding blank line - Frank Fegert
 
