--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	juniper: add command show version invoke-on other-routing-engine
+
 	srancid: temp sensor parsing for M6348 and M8024 - Frank Fegert
 
 	srancid: Insert the command string at the top of some of the output
