--- a/man/router.db.5
+++ b/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "25 November 2014"
+.TH "router.db" "5" "15 January 2016"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -74,6 +74,10 @@ A Bay Networks router.
 .B cat5
 A Cisco catalyst series 5000 and 4000 switches (i.e.: running the catalyst OS,
 not IOS).
+.TP
+.ID 15n
+.B ciena-ws
+A Ciena Waveserver.
 .TP
 .ID 15n
 .B cisco
